Change log for zeit.web
=======================

2.55 (unreleased)
-----------------

- ZON-2710: Use external SVG sprite in ZMO

- ZON-2732: Move celeraone device detection header setting to varnish

- ZON-2536: Move generic image assets to core module


2.54.1 (2016-02-02)
-------------------

- FIX: Remove tautologous GTM include in ZMO template

- FIX: Handle images without copyrights in instantarticle template

- FIX: Use correct URL to retrieve an author's comments


2.54 (2016-02-01)
-----------------

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
| DEPLOYMENT-NOTE: Please also deploy zeit-online cookbook 0.2.8 |
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

- FIX: Fix scope of schema.org SiteNavigationElement

- ZON-2701: Framebuilder: inline required SVG icons

- MAINT: Add byline to nextread teaser

- ZON-2617: Polish author page, handle missing content and add sharing image

- ZON-2686: Add Google Tag Manager to ZMO

- FIX: Change wording from 'Leser' to 'Aufrufe'in Buzzbox

- ZON-2535: Migrate ZMO to R/A/M page structure

- MAINT: Refurbish infobox tab link styles

- ZON-2593: Webtrekk tracking if newsletter-optin parameter is set

- ZON-2665: Centralize Module Class and integrate ZMO Buzbbox

- FIX: Determine ressort from navigation properly (bugsnag)

- ZON-2688: Update C1 headers and include tracking script


2.53 (2016-01-27)
-----------------

- HOTFIX: IVW: fix wrong variable for questionnaire

- ZON-2648: Add privacy disclaimer and impressum to Instant Articles

- FIX: Let batou & grunt play nice together


2.52 (2016-01-27)
-----------------

- ZON-2729: Set sizes attribute for image srcset

- FIX: Show date_last_published with adjusted TZ info

- FIX: Prevent and test for ranking area proxy exposures

- FIX: Catch and wrap community request timeouts


2.51 (2016-01-22)
-----------------

- ZON-2598: Introduce Accelerated Mobile Pages (AMP)

- ZON-2604: Add webtrekk pixel to amp article template
