@@ -4,6 +4,8 @@ Change log for zeit.web
 2.55 (unreleased)
 -----------------
 
+- FIX: Unobtrusive loading of CeleraOne tracking script
+
 - ZON-2710: Use external SVG sprite in ZMO
 
 - ZON-2732: Move celeraone device detection header setting to varnish
